--- a/widget/touken/touken.html
+++ b/widget/touken/touken.html
@@ -334,103 +334,103 @@ permalink: /strategy/touken/
 		<table>
 			<thead><tr><th>编号</th><th>回想</th><th>地点</th><th>刀剑</th><th>条件</th></tr></thead>
 			<tbody>
-				<tr><td>001</td><td>土方の話</td><td>1-1</td><td>和泉守兼定、堀川国広</td><td></td></tr>
-				<tr><td>002</td><td>沖田の話</td><td>1-4</td><td>大和守安定、加州清光</td><td></td></tr>
-				<tr><td>003</td><td>太郎と次郎</td><td>2-1</td><td>太郎太刀、次郎太刀</td><td></td></tr>
-				<tr><td>004</td><td>無用の長物</td><td>2-2</td><td>同田貫正国、御手杵</td><td></td></tr>
-				<tr><td>005</td><td>悲しみの剣たち</td><td>2-4</td><td>鯰尾藤四郎、一期一振</td><td></td></tr>
-				<tr><td>006</td><td>安土の名工</td><td>3-4</td><td>山姥切国広、山伏国広</td><td></td></tr>
-				<tr><td>007</td><td>今川の剣</td><td>4-3</td><td>江雪左文字、宗三左文字</td><td></td></tr>
-				<tr><td>008</td><td>義経の話</td><td>5-4</td><td>岩融、今剣</td><td></td></tr>
-				<tr><td>009</td><td>神剣までの道</td><td></td><td>石切丸、にっかり青江</td><td></td></tr>
-				<tr><td>010</td><td>藤四郎だらけなのは</td><td></td><td>厚藤四郎、五虎退</td><td></td></tr>
-				<tr><td>011</td><td>来派の話</td><td></td><td>蛍丸、愛染国俊</td><td></td></tr>
-				<tr><td>012</td><td>足利家の話</td><td></td><td>三日月宗近、骨喰藤四郎</td><td></td></tr>
-				<tr><td>013</td><td>狐の話</td><td></td><td>鳴狐、小狐丸</td><td></td></tr>
-				<tr><td>014</td><td>近藤VS竜馬</td><td>1-4</td><td>長曽祢虎徹、陸奥守吉行</td><td></td></tr>
-				<tr><td>015</td><td>池田屋事件·市中</td><td>6-1</td><td>堀川国広、長曽祢虎徹、和泉守兼定</td><td></td></tr>
-				<tr><td>016</td><td>池田屋事件·大橋にて</td><td>6-2</td><td>大和守安定、和泉守兼定</td><td></td></tr>
-				<tr><td>017</td><td>池田屋事件·突入</td><td>6-3</td><td>大和守安定、加州清光</td><td></td></tr>
-				<tr><td>018</td><td>池田屋事件·裏庭へ</td><td>6-4</td><td>長曽祢虎徹、加州清光</td><td></td></tr>
-				<tr><td>019</td><td>博多の話</td><td>5-2</td><td>博多藤四郎、日本号</td><td></td></tr>
-				<tr><td>020</td><td>三本の槍</td><td></td><td>御手杵、日本号、蜻蛉切</td><td></td></tr>
-				<tr><td>021</td><td>黒田家の話</td><td></td><td>日本号、へし切長谷部</td><td></td></tr>
-				<tr><td>022</td><td>黒田家の話·その後</td><td></td><td>日本号、へし切長谷部</td><td>多次出陣</td></tr>
-				<tr><td>023</td><td>幸運の刀</td><td>4-2</td><td>物吉貞宗、後藤藤四郎</td><td></td></tr>
-				<tr><td>024</td><td>源氏の宝剣</td><td>5-3</td><td>髭切、膝丸</td><td></td></tr>
-				<tr><td>025</td><td>悲しみと·なぐさめ</td><td>3-2</td><td>不動行光、へし切長谷部</td><td></td></tr>
-				<tr><td>026</td><td>僧と山伏</td><td></td><td>山伏国広、数珠丸恒次</td><td></td></tr>
-				<tr><td>027</td><td>関ケ原へは……</td><td>3-1</td><td>太鼓鐘貞宗、大倶利伽羅</td><td></td></tr>
-				<tr><td>028</td><td>幕府の霊的な守り</td><td>1-2</td><td>大典太光世、ソハヤノツルキ</td><td></td></tr>
-				<tr><td>029</td><td>写しの悲哀</td><td></td><td>ソハヤノツルキ、山姥切国広</td><td></td></tr>
-				<tr><td>030</td><td>前田家の話</td><td></td><td>大典太光世、前田藤四郎</td><td></td></tr>
-				<tr><td>031</td><td>天下人の霊剣</td><td></td><td>ソハヤノツルキ、物吉貞宗</td><td></td></tr>
-				<tr><td>032</td><td>九曜と竹雀のえにし 発端</td><td>7-1</td><td>歌仙、小夜</td><td>勝利帰城</td></tr>
-				<tr><td>033</td><td>九曜と竹雀のえにし 勃発</td><td>7-1</td><td>歌仙、大倶利</td><td>32発生後</td></tr>
-				<tr><td>034</td><td>九曜と竹雀のえにし 接触</td><td>7-2</td><td>燭台切、小夜、大倶利</td><td>33発生後、勝利帰城</td></tr>
-				<tr><td>035</td><td>九曜と竹雀のえにし 接触·続</td><td>7-2</td><td>燭台切、小夜、鶴丸</td><td>34発生後、勝利帰城</td></tr>
-				<tr><td>036</td><td>九曜と竹雀のえにし 協力</td><td>7-2</td><td>燭台切、小夜、歌仙、大倶利</td><td>35発生後、勝利帰城</td></tr>
-				<tr><td>037</td><td>九曜と竹雀のえにし 協力·続</td><td>7-2</td><td>燭台切、小夜、太鼓鐘、歌仙、大倶利</td><td>36発生後、勝利帰城</td></tr>
-				<tr><td>038</td><td>九曜と竹雀のえにし 団結</td><td>7-3</td><td>燭台切、小夜</td><td>36発生後、勝利帰城</td></tr>
-				<tr><td>039</td><td>九曜と竹雀のえにし 団結·続</td><td>7-3</td><td>燭台切、小夜、太鼓鐘</td><td>36&amp;37発生後、勝利帰城</td></tr>
-				<tr><td>040</td><td>九曜と竹雀のえにし 真心</td><td>7-3</td><td>燭台切、小夜</td><td>38発生後、勝利帰城</td></tr>
-				<tr><td>041</td><td>九曜と竹雀のえにし 真心·続</td><td>7-3</td><td>燭台切、小夜、鶴丸</td><td>40発生後、勝利帰城</td></tr>
-				<tr><td>042</td><td>九曜と竹雀のえにし 落着</td><td>7-4</td><td>燭台切、歌仙、大倶利</td><td>40発生後</td></tr>
-				<tr><td>043</td><td>九曜と竹雀のえにし 縁故</td><td>7-4</td><td>燭台切、小夜、歌仙、大倶利</td><td>42発生後、帰城</td></tr>
-				<tr><td>044</td><td>じっちゃんと一緒</td><td></td><td>獅子王、小烏丸</td><td></td></tr>
-				<tr><td>045</td><td>童子切はどこだ？</td><td>2-3</td><td>大包平、鶯丸</td><td></td></tr>
-				<tr><td>046</td><td>困った癖</td><td></td><td>千子村正、蜻蛉切</td><td></td></tr>
-				<tr><td>047</td><td>命を果たすのは俺だ</td><td></td><td>へし切長谷部、巴形薙刀</td><td></td></tr>
-				<tr><td>048</td><td>関ヶ原の両大将</td><td>3-1</td><td>毛利藤四郎、ソハヤノツルキ</td><td></td></tr>
-				<tr><td>049</td><td>歌のかたち今昔</td><td></td><td>篭手切江、歌仙兼定</td><td></td></tr>
-				<tr><td>050</td><td>輝く星を目指して</td><td></td><td>篭手切江、平野藤四郎</td><td></td></tr>
-				<tr><td>051</td><td>謙信の話</td><td>3-3</td><td>謙信景光、小豆長光</td><td></td></tr>
-				<tr><td>052</td><td>西軍の刀たち</td><td>3-1</td><td>日向正宗、毛利藤四郎</td><td></td></tr>
-				<tr><td>053</td><td>戦況の行方</td><td></td><td>巴形薙刀、静形薙刀</td><td></td></tr>
-				<tr><td>054</td><td>呪い仲間</td><td></td><td>南泉一文字、山姥切国広</td><td></td></tr>
-				<tr><td>055</td><td>猫斬りと山姥切</td><td></td><td>南泉一文字、山姥切長義</td><td></td></tr>
-				<tr><td>056</td><td>ふたつの山姥切</td><td></td><td>山姥切国広、山姥切長義</td><td></td></tr>
-				<tr><td>057</td><td>ふたつの山姥切</td><td></td><td>山姥切国広·極、山姥切長義</td><td></td></tr>
-				<tr><td>058</td><td>すていじ あくと1</td><td></td><td>篭手切江、豊前江</td><td></td></tr>
-				<tr><td>059</td><td>槍への対抗心</td><td></td><td>静形薙刀、御手杵</td><td></td></tr>
-				<tr><td>060</td><td>過去はなくとも</td><td></td><td>静形薙刀、骨喰藤四郎</td><td></td></tr>
-				<tr><td>061</td><td>阿吽の長物</td><td>8-1</td><td>同田貫正国、御手杵</td><td></td></tr>
-				<tr><td>062</td><td>阿吽の大小</td><td>8-1</td><td>同田貫正国、骨喰藤四郎</td><td>61発生後、E点到達</td></tr>
-				<tr><td>063</td><td>同病相憐れむ</td><td>8-1</td><td>御手杵、骨喰藤四郎</td><td>62発生後、E点到達</td></tr>
-				<tr><td>064</td><td>つるぎの兄弟</td><td></td><td>白山吉光、一期一振</td><td></td></tr>
-				<tr><td>065</td><td>由来は近くも今は遠く</td><td></td><td>肥前忠広、陸奥守吉行</td><td></td></tr>
-				<tr><td>066</td><td>由来は近く、心も近く</td><td></td><td>肥前忠広、南海太郎朝尊、陸奥守吉行</td><td></td></tr>
-				<tr><td>067</td><td>風が全てを押し流す</td><td>2-3</td><td>千代金丸、北谷菜切</td><td></td></tr>
-				<tr><td>068</td><td>信用と亀の間に</td><td></td><td>千代金丸、北谷菜切、浦島虎徹</td><td></td></tr>
-				<tr><td>069</td><td>海を想い</td><td></td><td>千代金丸、北谷菜切、浦島虎徹</td><td>68発生後</td></tr>
-				<tr><td>070</td><td>石投げの見物</td><td>8-2</td><td>同田貫正国、御手杵</td><td>63発生後</td></tr>
-				<tr><td>071</td><td>ここから生まれしもの</td><td>8-2</td><td>骨喰藤四郎、同田貫正国、御手杵</td><td>70発生後</td></tr>
-				<tr><td>072</td><td>風に乗れ</td><td></td><td>桑名江、豊前江</td><td></td></tr>
-				<tr><td>073</td><td>すていじ あくと2</td><td></td><td>桑名江、豊前江</td><td>58発生後</td></tr>
-				<tr><td>074</td><td>新々刀の系譜</td><td></td><td>	南海太郎朝尊、水心子正秀</td><td></td></tr>
-				<tr><td>075</td><td>名を分かつ</td><td></td><td>長曽祢虎徹、源清麿</td><td></td></tr>
-				<tr><td>076</td><td>言えない過去</td><td>3-1</td><td>豊前江、松井江</td><td>勝利</td></tr>
-				<tr><td>077</td><td>すていじ あくと3</td><td></td><td>篭手切江、豊前江、桑名江、松井江</td><td></td></tr>
-				<tr><td>078</td><td>一文字一家の長</td><td></td><td>南泉一文字、山鳥毛</td><td></td></tr>
-				<tr><td>079</td><td>予想外の再会</td><td></td><td>小豆長光、山鳥毛</td><td></td></tr>
-				<tr><td>080</td><td>見ることのなかった世界</td><td></td><td>秋田藤四郎、大典太光世</td><td></td></tr>
-				<tr><td>081</td><td>秀吉と信長の話</td><td>3-4</td><td>鬼丸国綱、薬研藤四郎</td><td></td></tr>
-				<tr><td>082</td><td>粟田口の</td><td>8-1</td><td>鬼丸国綱、乱藤四郎</td><td></td></tr>
-				<tr><td>083</td><td>鬼丸と鬼切</td><td>5-1</td><td>鬼丸国綱、髭切</td><td></td></tr>
-				<tr><td>084</td><td>天下五剣がまた一つ</td><td>4-4</td><td>三日月宗近、鬼丸国綱</td><td></td></tr>
-				<tr><td>085</td><td>天下五剣が集うとき</td><td></td><td>数珠丸恒次、鬼丸国綱</td><td></td></tr>
-				<tr><td>086</td><td>妖物切りの陰気</td><td>4-4</td><td>大典太光世、鬼丸国綱</td><td></td></tr>
-				<tr><td>087</td><td>妖物切りの陽気</td><td>4-4</td><td>大典太光世、鬼丸国綱</td><td></td></tr>
-				<tr><td>088</td><td>妖物切りの酒気</td><td>4-4</td><td>大典太光世、鬼丸国綱</td><td>87発生後、帰城</td></tr>
-				<tr><td>089</td><td>いくさのあと</td><td>5-1</td><td>古今伝授の太刀、地蔵行平</td><td></td></tr>
-				<tr><td>090</td><td>本丸という歌集</td><td>2-4</td><td>歌仙兼定、古今伝授の太刀</td><td>王点勝利</td></tr>
-				<tr><td>091</td><td>僧と地蔵</td><td></td><td>江雪左文字、地蔵行平</td><td></td></tr>
-				<tr><td>092</td><td>揃いし沖縄の宝剣</td><td></td><td>千代金丸、北谷菜切、治金丸</td><td></td></tr>
-				<tr><td>093</td><td>兄の影として 花</td><td></td><td>北谷菜切、治金丸</td><td></td></tr>
-				<tr><td>094</td><td>兄の影として 波</td><td></td><td>千代金丸、治金丸</td><td></td></tr>
-				<tr><td>095</td><td>翼顕現 桜</td><td></td><td>山鳥毛、日光一文字</td><td></td></tr>
-				<tr><td>096</td><td>一文字一家の躾</td><td></td><td>南泉一文字、日光一文字</td><td>78発生後</td></tr>
-				<tr><td>097</td><td>黒田家の弟分</td><td></td><td>日本号、日光一文字</td><td>21発生後</td></tr>
+				<tr><td>001</td><td>土方の話</td><td>1-1</td><td>和泉守兼定､堀川国広</td><td></td></tr>
+				<tr><td>002</td><td>沖田の話</td><td>1-4</td><td>大和守安定､加州清光</td><td></td></tr>
+				<tr><td>003</td><td>太郎と次郎</td><td>2-1</td><td>太郎太刀､次郎太刀</td><td></td></tr>
+				<tr><td>004</td><td>無用の長物</td><td>2-2</td><td>同田貫正国､御手杵</td><td></td></tr>
+				<tr><td>005</td><td>悲しみの剣たち</td><td>2-4</td><td>鯰尾藤四郎､一期一振</td><td></td></tr>
+				<tr><td>006</td><td>安土の名工</td><td>3-4</td><td>山姥切国広､山伏国広</td><td></td></tr>
+				<tr><td>007</td><td>今川の剣</td><td>4-3</td><td>江雪左文字､宗三左文字</td><td></td></tr>
+				<tr><td>008</td><td>義経の話</td><td>5-4</td><td>岩融､今剣</td><td></td></tr>
+				<tr><td>009</td><td>神剣までの道</td><td></td><td>石切丸､にっかり青江</td><td></td></tr>
+				<tr><td>010</td><td>藤四郎だらけなのは</td><td></td><td>厚藤四郎､五虎退</td><td></td></tr>
+				<tr><td>011</td><td>来派の話</td><td></td><td>蛍丸､愛染国俊</td><td></td></tr>
+				<tr><td>012</td><td>足利家の話</td><td></td><td>三日月宗近､骨喰藤四郎</td><td></td></tr>
+				<tr><td>013</td><td>狐の話</td><td></td><td>鳴狐､小狐丸</td><td></td></tr>
+				<tr><td>014</td><td>近藤VS竜馬</td><td>1-4</td><td>長曽祢虎徹､陸奥守吉行</td><td></td></tr>
+				<tr><td>015</td><td>池田屋事件·市中</td><td>6-1</td><td>堀川国広､長曽祢虎徹､和泉守兼定</td><td></td></tr>
+				<tr><td>016</td><td>池田屋事件·大橋にて</td><td>6-2</td><td>大和守安定､和泉守兼定</td><td></td></tr>
+				<tr><td>017</td><td>池田屋事件·突入</td><td>6-3</td><td>大和守安定､加州清光</td><td></td></tr>
+				<tr><td>018</td><td>池田屋事件·裏庭へ</td><td>6-4</td><td>長曽祢虎徹､加州清光</td><td></td></tr>
+				<tr><td>019</td><td>博多の話</td><td>5-2</td><td>博多藤四郎､日本号</td><td></td></tr>
+				<tr><td>020</td><td>三本の槍</td><td></td><td>御手杵､日本号､蜻蛉切</td><td></td></tr>
+				<tr><td>021</td><td>黒田家の話</td><td></td><td>日本号､へし切長谷部</td><td></td></tr>
+				<tr><td>022</td><td>黒田家の話·その後</td><td></td><td>日本号､へし切長谷部</td><td>多次出陣</td></tr>
+				<tr><td>023</td><td>幸運の刀</td><td>4-2</td><td>物吉貞宗､後藤藤四郎</td><td></td></tr>
+				<tr><td>024</td><td>源氏の宝剣</td><td>5-3</td><td>髭切､膝丸</td><td></td></tr>
+				<tr><td>025</td><td>悲しみと·なぐさめ</td><td>3-2</td><td>不動行光､へし切長谷部</td><td></td></tr>
+				<tr><td>026</td><td>僧と山伏</td><td></td><td>山伏国広､数珠丸恒次</td><td></td></tr>
+				<tr><td>027</td><td>関ケ原へは……</td><td>3-1</td><td>太鼓鐘貞宗､大倶利伽羅</td><td></td></tr>
+				<tr><td>028</td><td>幕府の霊的な守り</td><td>1-2</td><td>大典太光世､ソハヤノツルキ</td><td></td></tr>
+				<tr><td>029</td><td>写しの悲哀</td><td></td><td>ソハヤノツルキ､山姥切国広</td><td></td></tr>
+				<tr><td>030</td><td>前田家の話</td><td></td><td>大典太光世､前田藤四郎</td><td></td></tr>
+				<tr><td>031</td><td>天下人の霊剣</td><td></td><td>ソハヤノツルキ､物吉貞宗</td><td></td></tr>
+				<tr><td>032</td><td>九曜と竹雀のえにし 発端</td><td>7-1</td><td>歌仙､小夜</td><td>勝利帰城</td></tr>
+				<tr><td>033</td><td>九曜と竹雀のえにし 勃発</td><td>7-1</td><td>歌仙､大倶利</td><td>32発生後</td></tr>
+				<tr><td>034</td><td>九曜と竹雀のえにし 接触</td><td>7-2</td><td>燭台切､小夜､大倶利</td><td>33発生後､勝利帰城</td></tr>
+				<tr><td>035</td><td>九曜と竹雀のえにし 接触·続</td><td>7-2</td><td>燭台切､小夜､鶴丸</td><td>34発生後､勝利帰城</td></tr>
+				<tr><td>036</td><td>九曜と竹雀のえにし 協力</td><td>7-2</td><td>燭台切､小夜､歌仙､大倶利</td><td>35発生後､勝利帰城</td></tr>
+				<tr><td>037</td><td>九曜と竹雀のえにし 協力·続</td><td>7-2</td><td>燭台切､小夜､太鼓鐘､歌仙､大倶利</td><td>36発生後､勝利帰城</td></tr>
+				<tr><td>038</td><td>九曜と竹雀のえにし 団結</td><td>7-3</td><td>燭台切､小夜</td><td>36発生後､勝利帰城</td></tr>
+				<tr><td>039</td><td>九曜と竹雀のえにし 団結·続</td><td>7-3</td><td>燭台切､小夜､太鼓鐘</td><td>36&amp;37発生後､勝利帰城</td></tr>
+				<tr><td>040</td><td>九曜と竹雀のえにし 真心</td><td>7-3</td><td>燭台切､小夜</td><td>38発生後､勝利帰城</td></tr>
+				<tr><td>041</td><td>九曜と竹雀のえにし 真心·続</td><td>7-3</td><td>燭台切､小夜､鶴丸</td><td>40発生後､勝利帰城</td></tr>
+				<tr><td>042</td><td>九曜と竹雀のえにし 落着</td><td>7-4</td><td>燭台切､歌仙､大倶利</td><td>40発生後</td></tr>
+				<tr><td>043</td><td>九曜と竹雀のえにし 縁故</td><td>7-4</td><td>燭台切､小夜､歌仙､大倶利</td><td>42発生後､帰城</td></tr>
+				<tr><td>044</td><td>じっちゃんと一緒</td><td></td><td>獅子王､小烏丸</td><td></td></tr>
+				<tr><td>045</td><td>童子切はどこだ？</td><td>2-3</td><td>大包平､鶯丸</td><td></td></tr>
+				<tr><td>046</td><td>困った癖</td><td></td><td>千子村正､蜻蛉切</td><td></td></tr>
+				<tr><td>047</td><td>命を果たすのは俺だ</td><td></td><td>へし切長谷部､巴形薙刀</td><td></td></tr>
+				<tr><td>048</td><td>関ヶ原の両大将</td><td>3-1</td><td>毛利藤四郎､ソハヤノツルキ</td><td></td></tr>
+				<tr><td>049</td><td>歌のかたち今昔</td><td></td><td>篭手切江､歌仙兼定</td><td></td></tr>
+				<tr><td>050</td><td>輝く星を目指して</td><td></td><td>篭手切江､平野藤四郎</td><td></td></tr>
+				<tr><td>051</td><td>謙信の話</td><td>3-3</td><td>謙信景光､小豆長光</td><td></td></tr>
+				<tr><td>052</td><td>西軍の刀たち</td><td>3-1</td><td>日向正宗､毛利藤四郎</td><td></td></tr>
+				<tr><td>053</td><td>戦況の行方</td><td></td><td>巴形薙刀､静形薙刀</td><td></td></tr>
+				<tr><td>054</td><td>呪い仲間</td><td></td><td>南泉一文字､山姥切国広</td><td></td></tr>
+				<tr><td>055</td><td>猫斬りと山姥切</td><td></td><td>南泉一文字､山姥切長義</td><td></td></tr>
+				<tr><td>056</td><td>ふたつの山姥切</td><td></td><td>山姥切国広､山姥切長義</td><td></td></tr>
+				<tr><td>057</td><td>ふたつの山姥切</td><td></td><td>山姥切国広·極､山姥切長義</td><td></td></tr>
+				<tr><td>058</td><td>すていじ あくと1</td><td></td><td>篭手切江､豊前江</td><td></td></tr>
+				<tr><td>059</td><td>槍への対抗心</td><td></td><td>静形薙刀､御手杵</td><td></td></tr>
+				<tr><td>060</td><td>過去はなくとも</td><td></td><td>静形薙刀､骨喰藤四郎</td><td></td></tr>
+				<tr><td>061</td><td>阿吽の長物</td><td>8-1</td><td>同田貫正国､御手杵</td><td></td></tr>
+				<tr><td>062</td><td>阿吽の大小</td><td>8-1</td><td>同田貫正国､骨喰藤四郎</td><td>61発生後､E点到達</td></tr>
+				<tr><td>063</td><td>同病相憐れむ</td><td>8-1</td><td>御手杵､骨喰藤四郎</td><td>62発生後､E点到達</td></tr>
+				<tr><td>064</td><td>つるぎの兄弟</td><td></td><td>白山吉光､一期一振</td><td></td></tr>
+				<tr><td>065</td><td>由来は近くも今は遠く</td><td></td><td>肥前忠広､陸奥守吉行</td><td></td></tr>
+				<tr><td>066</td><td>由来は近く､心も近く</td><td></td><td>肥前忠広､南海太郎朝尊､陸奥守吉行</td><td></td></tr>
+				<tr><td>067</td><td>風が全てを押し流す</td><td>2-3</td><td>千代金丸､北谷菜切</td><td></td></tr>
+				<tr><td>068</td><td>信用と亀の間に</td><td></td><td>千代金丸､北谷菜切､浦島虎徹</td><td></td></tr>
+				<tr><td>069</td><td>海を想い</td><td></td><td>千代金丸､北谷菜切､浦島虎徹</td><td>68発生後</td></tr>
+				<tr><td>070</td><td>石投げの見物</td><td>8-2</td><td>同田貫正国､御手杵</td><td>63発生後</td></tr>
+				<tr><td>071</td><td>ここから生まれしもの</td><td>8-2</td><td>骨喰藤四郎､同田貫正国､御手杵</td><td>70発生後</td></tr>
+				<tr><td>072</td><td>風に乗れ</td><td></td><td>桑名江､豊前江</td><td></td></tr>
+				<tr><td>073</td><td>すていじ あくと2</td><td></td><td>桑名江､豊前江</td><td>58発生後</td></tr>
+				<tr><td>074</td><td>新々刀の系譜</td><td></td><td>	南海太郎朝尊､水心子正秀</td><td></td></tr>
+				<tr><td>075</td><td>名を分かつ</td><td></td><td>長曽祢虎徹､源清麿</td><td></td></tr>
+				<tr><td>076</td><td>言えない過去</td><td>3-1</td><td>豊前江､松井江</td><td>勝利</td></tr>
+				<tr><td>077</td><td>すていじ あくと3</td><td></td><td>篭手切江､豊前江､桑名江､松井江</td><td></td></tr>
+				<tr><td>078</td><td>一文字一家の長</td><td></td><td>南泉一文字､山鳥毛</td><td></td></tr>
+				<tr><td>079</td><td>予想外の再会</td><td></td><td>小豆長光､山鳥毛</td><td></td></tr>
+				<tr><td>080</td><td>見ることのなかった世界</td><td></td><td>秋田藤四郎､大典太光世</td><td></td></tr>
+				<tr><td>081</td><td>秀吉と信長の話</td><td>3-4</td><td>鬼丸国綱､薬研藤四郎</td><td></td></tr>
+				<tr><td>082</td><td>粟田口の</td><td>8-1</td><td>鬼丸国綱､乱藤四郎</td><td></td></tr>
+				<tr><td>083</td><td>鬼丸と鬼切</td><td>5-1</td><td>鬼丸国綱､髭切</td><td></td></tr>
+				<tr><td>084</td><td>天下五剣がまた一つ</td><td>4-4</td><td>三日月宗近､鬼丸国綱</td><td></td></tr>
+				<tr><td>085</td><td>天下五剣が集うとき</td><td></td><td>数珠丸恒次､鬼丸国綱</td><td></td></tr>
+				<tr><td>086</td><td>妖物切りの陰気</td><td>4-4</td><td>大典太光世､鬼丸国綱</td><td></td></tr>
+				<tr><td>087</td><td>妖物切りの陽気</td><td>4-4</td><td>大典太光世､鬼丸国綱</td><td></td></tr>
+				<tr><td>088</td><td>妖物切りの酒気</td><td>4-4</td><td>大典太光世､鬼丸国綱</td><td>87発生後､帰城</td></tr>
+				<tr><td>089</td><td>いくさのあと</td><td>5-1</td><td>古今伝授の太刀､地蔵行平</td><td></td></tr>
+				<tr><td>090</td><td>本丸という歌集</td><td>2-4</td><td>歌仙兼定､古今伝授の太刀</td><td>王点勝利</td></tr>
+				<tr><td>091</td><td>僧と地蔵</td><td></td><td>江雪左文字､地蔵行平</td><td></td></tr>
+				<tr><td>092</td><td>揃いし沖縄の宝剣</td><td></td><td>千代金丸､北谷菜切､治金丸</td><td></td></tr>
+				<tr><td>093</td><td>兄の影として 花</td><td></td><td>北谷菜切､治金丸</td><td></td></tr>
+				<tr><td>094</td><td>兄の影として 波</td><td></td><td>千代金丸､治金丸</td><td></td></tr>
+				<tr><td>095</td><td>翼顕現 桜</td><td></td><td>山鳥毛､日光一文字</td><td></td></tr>
+				<tr><td>096</td><td>一文字一家の躾</td><td></td><td>南泉一文字､日光一文字</td><td>78発生後</td></tr>
+				<tr><td>097</td><td>黒田家の弟分</td><td></td><td>日本号､日光一文字</td><td>21発生後</td></tr>
 			</tbody>
 		</table>
 	</div>
@@ -546,12 +546,3 @@ permalink: /strategy/touken/
 
 </div>
 </main>
-
-<footer><a href="/" target="_blank">{{ site.data.svg['logo'] }}</a></footer>
-
-<script src="{{ site.baseurl}}/assets/script.counter.js"></script>
-<script src="{{ site.baseurl}}/assets/script.toc.js"></script>
-<script type="text/javascript">
-	//$('section div').css('height', $(this).height());
-	$('table').attr('data-height', $(this).innerHeight());
-</script>
