--- a/widget/touken/touken.html
+++ b/widget/touken/touken.html
@@ -258,74 +258,78 @@ permalink: /strategy/touken/
 
 <section>
 	<h2 id="出陣">出陣</h2>
-	<div><table>
-		<thead>
-			<tr><th>No.</th><th>地图</th><th>区域</th><th>难度</th><th>资源</th><th>限制</th><th>回想</th><th>点数</th></tr>
-		</thead>
-		<tbody>
-			<tr><td>1-1</td><td rowspan="4">維新</td><td>函館</td><td>★</td><td></td><td>11</td><td>01</td><td></td></tr>
-			<tr><td>1-2</td><td>会津</td><td>★</td><td>木炭</td><td>12</td><td>34</td><td></td></tr>
-			<tr><td>1-3</td><td>宇都宮</td><td>★</td><td>砥石</td><td>13</td><td></td><td></td></tr>
-			<tr><td>1-4</td><td>鳥羽</td><td>★★</td><td>木炭 冷却</td><td>20</td><td>02 14</td><td></td></tr>
-			<tr><td>2-1</td><td rowspan="4">江戸</td><td>鳥羽</td><td>★</td><td>玉鋼 砥石</td><td>23</td><td>03</td><td></td></tr>
-			<tr><td>2-2</td><td>江戸</td><td>★</td><td>木炭</td><td>26</td><td>04</td><td></td></tr>
-			<tr><td>2-3</td><td>江戸·元禄</td><td>★★</td><td>冷却</td><td>29</td><td></td><td></td></tr>
-			<tr><td>2-4</td><td>大阪·大阪冬の陣</td><td>★★</td><td>依頼</td><td>32</td><td>05 90</td><td></td></tr>
-			<tr><td>3-1</td><td rowspan="4">織豊</td><td>関ヶ原</td><td>★★</td><td>砥石</td><td>40</td><td>27 76</td><td></td></tr>
-			<tr><td>3-2</td><td>本能寺</td><td>★★</td><td>玉鋼 依頼</td><td>42</td><td>25</td><td></td></tr>
-			<tr><td>3-3</td><td>越前</td><td>★★</td><td>木炭 玉鋼</td><td>47</td><td></td><td></td></tr>
-			<tr><td>3-4</td><td>安土</td><td>★★★</td><td>砥石 依頼</td><td>51</td><td>06 81</td><td></td></tr>
-			<tr><td>4-1</td><td rowspan="4">戦国</td><td>長篠</td><td>★★</td><td>冷却 依頼</td><td>55</td><td></td><td></td></tr>
-			<tr><td>4-2</td><td>三方ヶ原</td><td>★★★</td><td>砥石</td><td>59</td><td>23</td><td>3</td></tr>
-			<tr><td>4-3</td><td>桶狭間</td><td>★★★</td><td>木炭 冷却 玉鋼</td><td>63</td><td>07</td><td>4</td></tr>
-			<tr><td>4-4</td><td>京都·椿寺</td><td>★★★★</td><td>冷却 依頼</td><td>68</td><td>84 86 87 88</td><td>5</td></tr>
-			<tr><td>5-1</td><td rowspan="4">武家</td><td>鎌倉·元弘の乱</td><td>★★★</td><td>木炭</td><td>78</td><td>83 89</td><td>4</td></tr>
-			<tr><td>5-2</td><td>元寇·博多湾</td><td>★★★★</td><td>冷却 木炭 玉鋼</td><td>83</td><td>19</td><td>3</td></tr>
-			<tr><td>5-3</td><td>墨俣·承久の乱</td><td>★★★★★</td><td>砥石 玉鋼</td><td>88</td><td>24</td><td>4</td></tr>
-			<tr><td>5-4</td><td>厚樫山·阿津賀志山の戦い</td><td>★★★★★</td><td>木炭 冷却</td><td></td><td>08</td><td></td></tr>
-			<tr><td>6-1</td><td rowspan="4">池田屋</td><td>京都·市中</td><td>★★★★★★</td><td>冷却 砥石</td><td></td><td>15</td><td></td></tr>
-			<tr><td>6-2</td><td>三条大橋</td><td>★★★★★★</td><td>玉鋼 冷却</td><td></td><td>16</td><td></td></tr>
-			<tr><td>6-3</td><td>池田屋二階</td><td>★★★★★★</td><td>木炭 玉鋼 依頼</td><td></td><td>17</td><td></td></tr>
-			<tr><td>6-4</td><td>池田屋一階</td><td>★★★★★★</td><td>木炭 砥石</td><td></td><td>18</td><td></td></tr>
-			<tr><td>7-1</td><td rowspan="4">延享</td><td>江戸·新橋</td><td>★★★★★★★</td><td>木炭 玉鋼 依頼</td><td></td><td>28 29</td><td></td></tr>
-			<tr><td>7-2</td><td>江戸·白金台</td><td>★★★★★★★</td><td>木炭 玉鋼 冷却 砥石</td><td></td><td>30 31 32 33</td><td></td></tr>
-			<tr><td>7-3</td><td>江戸·江戸城下</td><td>★★★★★★★</td><td>木炭 玉鋼 冷却 砥石</td><td></td><td>38 39 40 41</td><td></td></tr>
-			<tr><td>7-4</td><td>江戸·江戸城内</td><td>★★★★★★★</td><td></td><td></td><td>42 43</td><td></td></tr>
-			<tr><td>8-1</td><td rowspan="2">青野原</td><td>阿弥陀ヶ峰</td><td>★★★★★★★</td><td>木炭 玉鋼 冷却 砥石 依頼</td><td></td><td>61 62 63 82</td><td></td></tr>
-			<tr><td>8-2</td><td>上田城</td><td>★★★★★★★</td><td>木炭 玉鋼 冷却 砥石 依頼</td><td></td><td>70 71</td><td></td></tr>
-		</tbody>
-	</table></div>
+	<div>
+		<table>
+			<thead>
+				<tr><th>No.</th><th>地图</th><th>区域</th><th>难度</th><th>资源</th><th>限制</th><th>回想</th><th>点数</th></tr>
+			</thead>
+			<tbody>
+				<tr><td>1-1</td><td rowspan="4">維新</td><td>函館</td><td>★</td><td></td><td>11</td><td>01</td><td></td></tr>
+				<tr><td>1-2</td><td>会津</td><td>★</td><td>木炭</td><td>12</td><td>34</td><td></td></tr>
+				<tr><td>1-3</td><td>宇都宮</td><td>★</td><td>砥石</td><td>13</td><td></td><td></td></tr>
+				<tr><td>1-4</td><td>鳥羽</td><td>★★</td><td>木炭 冷却</td><td>20</td><td>02 14</td><td></td></tr>
+				<tr><td>2-1</td><td rowspan="4">江戸</td><td>鳥羽</td><td>★</td><td>玉鋼 砥石</td><td>23</td><td>03</td><td></td></tr>
+				<tr><td>2-2</td><td>江戸</td><td>★</td><td>木炭</td><td>26</td><td>04</td><td></td></tr>
+				<tr><td>2-3</td><td>江戸·元禄</td><td>★★</td><td>冷却</td><td>29</td><td></td><td></td></tr>
+				<tr><td>2-4</td><td>大阪·大阪冬の陣</td><td>★★</td><td>依頼</td><td>32</td><td>05 90</td><td></td></tr>
+				<tr><td>3-1</td><td rowspan="4">織豊</td><td>関ヶ原</td><td>★★</td><td>砥石</td><td>40</td><td>27 76</td><td></td></tr>
+				<tr><td>3-2</td><td>本能寺</td><td>★★</td><td>玉鋼 依頼</td><td>42</td><td>25</td><td></td></tr>
+				<tr><td>3-3</td><td>越前</td><td>★★</td><td>木炭 玉鋼</td><td>47</td><td></td><td></td></tr>
+				<tr><td>3-4</td><td>安土</td><td>★★★</td><td>砥石 依頼</td><td>51</td><td>06 81</td><td></td></tr>
+				<tr><td>4-1</td><td rowspan="4">戦国</td><td>長篠</td><td>★★</td><td>冷却 依頼</td><td>55</td><td></td><td></td></tr>
+				<tr><td>4-2</td><td>三方ヶ原</td><td>★★★</td><td>砥石</td><td>59</td><td>23</td><td>3</td></tr>
+				<tr><td>4-3</td><td>桶狭間</td><td>★★★</td><td>木炭 冷却 玉鋼</td><td>63</td><td>07</td><td>4</td></tr>
+				<tr><td>4-4</td><td>京都·椿寺</td><td>★★★★</td><td>冷却 依頼</td><td>68</td><td>84 86 87 88</td><td>5</td></tr>
+				<tr><td>5-1</td><td rowspan="4">武家</td><td>鎌倉·元弘の乱</td><td>★★★</td><td>木炭</td><td>78</td><td>83 89</td><td>4</td></tr>
+				<tr><td>5-2</td><td>元寇·博多湾</td><td>★★★★</td><td>冷却 木炭 玉鋼</td><td>83</td><td>19</td><td>3</td></tr>
+				<tr><td>5-3</td><td>墨俣·承久の乱</td><td>★★★★★</td><td>砥石 玉鋼</td><td>88</td><td>24</td><td>4</td></tr>
+				<tr><td>5-4</td><td>厚樫山·阿津賀志山の戦い</td><td>★★★★★</td><td>木炭 冷却</td><td></td><td>08</td><td></td></tr>
+				<tr><td>6-1</td><td rowspan="4">池田屋</td><td>京都·市中</td><td>★★★★★★</td><td>冷却 砥石</td><td></td><td>15</td><td></td></tr>
+				<tr><td>6-2</td><td>三条大橋</td><td>★★★★★★</td><td>玉鋼 冷却</td><td></td><td>16</td><td></td></tr>
+				<tr><td>6-3</td><td>池田屋二階</td><td>★★★★★★</td><td>木炭 玉鋼 依頼</td><td></td><td>17</td><td></td></tr>
+				<tr><td>6-4</td><td>池田屋一階</td><td>★★★★★★</td><td>木炭 砥石</td><td></td><td>18</td><td></td></tr>
+				<tr><td>7-1</td><td rowspan="4">延享</td><td>江戸·新橋</td><td>★★★★★★★</td><td>木炭 玉鋼 依頼</td><td></td><td>28 29</td><td></td></tr>
+				<tr><td>7-2</td><td>江戸·白金台</td><td>★★★★★★★</td><td>木炭 玉鋼 冷却 砥石</td><td></td><td>30 31 32 33</td><td></td></tr>
+				<tr><td>7-3</td><td>江戸·江戸城下</td><td>★★★★★★★</td><td>木炭 玉鋼 冷却 砥石</td><td></td><td>38 39 40 41</td><td></td></tr>
+				<tr><td>7-4</td><td>江戸·江戸城内</td><td>★★★★★★★</td><td></td><td></td><td>42 43</td><td></td></tr>
+				<tr><td>8-1</td><td rowspan="2">青野原</td><td>阿弥陀ヶ峰</td><td>★★★★★★★</td><td>木炭 玉鋼 冷却 砥石 依頼</td><td></td><td>61 62 63 82</td><td></td></tr>
+				<tr><td>8-2</td><td>上田城</td><td>★★★★★★★</td><td>木炭 玉鋼 冷却 砥石 依頼</td><td></td><td>70 71</td><td></td></tr>
+			</tbody>
+		</table>
+	</div>
 </section>
 
 <section>
 	<h2 id="遠征">遠征</h2>
-	<div><table>
-		<thead>
-			<tr><th>No.</th><th>地图</th><th>名称</th><th>时间</th><th>木炭</th><th>木炭</th><th>玉鋼</th><th>玉鋼</th><th>冷却</th><th>冷却</th><th>砥石</th><th>砥石</th><th>依頼</th><th>依頼</th><th>手伝</th><th>手伝</th><th>小判</th><th>小判</th><th>Lv</th><th>編成</th></tr>
-		</thead>
-		<tbody>
-			<tr><td>A-1</td><td rowspan="4">維新</td><td>鳥羽·伏見の戦い</td><td>0:10</td><td>10</td><td>60</td><td>15</td><td>90</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>5</td><td>自由</td></tr>
-			<tr><td>A-2</td><td>世直し一揆</td><td>0:30</td><td></td><td></td><td></td><td></td><td>30</td><td>60</td><td>30</td><td>60</td><td></td><td></td><td></td><td></td><td></td><td></td><td>10</td><td>短刀</td></tr>
-			<tr><td>A-3</td><td>甲州勝沼の戦い</td><td>0:20</td><td>20</td><td>60</td><td></td><td></td><td>20</td><td>60</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>20</td><td>脇差</td></tr>
-			<tr><td>A-4</td><td>白河戦線</td><td>1:00</td><td></td><td></td><td>60</td><td>60</td><td></td><td></td><td>60</td><td>60</td><td></td><td></td><td></td><td></td><td></td><td></td><td>30</td><td>脇短</td></tr>
-			<tr><td>B-1</td><td rowspan="4">江戸</td><td>公武合体運動</td><td>1:30</td><td></td><td></td><td></td><td></td><td>90</td><td>60</td><td>90</td><td>60</td><td></td><td></td><td></td><td></td><td>200</td><td>133.3</td><td>50</td><td>自由</td></tr>
-			<tr><td>B-2</td><td>加役方人足寄場</td><td>3:00</td><td></td><td></td><td>50</td><td>16</td><td></td><td></td><td>250</td><td>83</td><td></td><td></td><td></td><td></td><td>200</td><td>66.7</td><td>60</td><td>打刀</td></tr>
-			<tr><td>B-3</td><td>享保の大飢饉</td><td>2:00</td><td>120</td><td>60</td><td></td><td></td><td>120</td><td>60</td><td></td><td></td><td>1</td><td>0.500</td><td></td><td></td><td></td><td></td><td>80</td><td>太刀</td></tr>
-			<tr><td>B-4</td><td>天下泰平</td><td>2:30</td><td></td><td></td><td>180</td><td>72</td><td></td><td></td><td>120</td><td>48</td><td></td><td></td><td>1</td><td>0.400</td><td></td><td></td><td>100</td><td>太打</td></tr>
-			<tr><td>C-1</td><td rowspan="4">織豊</td><td>美濃国の決戦</td><td>4:00</td><td>130</td><td>32</td><td>240</td><td>60</td><td></td><td></td><td></td><td></td><td>1</td><td>0.250</td><td></td><td></td><td></td><td></td><td>110</td><td>自由</td></tr>
-			<tr><td>C-2</td><td>反旗を翻した原因</td><td>3:00</td><td></td><td></td><td>100</td><td>33</td><td>60</td><td>20</td><td>150</td><td>50</td><td></td><td></td><td>1</td><td>0.333</td><td></td><td></td><td>120</td><td>大太</td></tr>
-			<tr><td>C-3</td><td>安土城の警備</td><td>10:00</td><td>200</td><td>20</td><td></td><td></td><td>500</td><td>50</td><td></td><td></td><td></td><td></td><td></td><td></td><td>400</td><td>40.0</td><td>130</td><td>自由</td></tr>
-			<tr><td>C-4</td><td>天下布武</td><td>8:00</td><td></td><td></td><td>200</td><td>25</td><td></td><td></td><td>500</td><td>62</td><td></td><td></td><td>1</td><td>0.125</td><td></td><td></td><td>140</td><td>自由</td></tr>
-			<tr><td>D-1</td><td rowspan="4">戦国</td><td>長篠城攻城戦</td><td>2:00</td><td></td><td></td><td>80</td><td>40</td><td>100</td><td>50</td><td>60</td><td>30</td><td>1</td><td>0.500</td><td></td><td></td><td></td><td></td><td>150</td><td>自由</td></tr>
-			<tr><td>D-2</td><td>西上作戦</td><td>5:00</td><td>100</td><td>20</td><td>380</td><td>76</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>400</td><td>80.0</td><td>180</td><td>自由</td></tr>
-			<tr><td>D-3</td><td>甲相駿三国同盟</td><td>12:00</td><td>100</td><td>8</td><td>200</td><td>17</td><td>500</td><td>42</td><td></td><td></td><td></td><td></td><td>2</td><td>0.167</td><td></td><td></td><td>200</td><td>自由</td></tr>
-			<tr><td>D-4</td><td>比叡山延暦寺</td><td>6:00</td><td>150</td><td>25</td><td></td><td></td><td></td><td></td><td>400</td><td>67</td><td></td><td></td><td></td><td></td><td>700</td><td>116.6</td><td>220</td><td>自由</td></tr>
-			<tr><td>E-1</td><td rowspan="4">武家</td><td>鎌倉防衛戦</td><td>12:00</td><td>250</td><td>21</td><td>250</td><td>21</td><td>250</td><td>21</td><td></td><td></td><td></td><td></td><td>2</td><td>0.167</td><td></td><td></td><td>240</td><td>自由</td></tr>
-			<tr><td>E-2</td><td>元寇防塁</td><td>18:00</td><td>200</td><td>11</td><td>500</td><td>28</td><td>300</td><td>17</td><td></td><td></td><td></td><td></td><td>2</td><td>0.111</td><td>700</td><td>38.9</td><td>260</td><td>槍</td></tr>
-			<tr><td>E-3</td><td>流鏑馬揃え</td><td>15:00</td><td>350</td><td>23</td><td>200</td><td>13</td><td>100</td><td>7</td><td>250</td><td>17</td><td></td><td></td><td></td><td></td><td>700</td><td>46.7</td><td>280</td><td>薙刀</td></tr>
-			<tr><td>E-4</td><td>奥州合戦</td><td>24:00</td><td>300</td><td>13</td><td>400</td><td>17</td><td>500</td><td>21</td><td></td><td></td><td>3</td><td>0.125</td><td></td><td></td><td>700</td><td>29.2</td><td>300</td><td>二種</td></tr>
-		</tbody>
-	</table></div>
+	<div>
+		<table>
+			<thead>
+				<tr><th>No.</th><th>地图</th><th>名称</th><th>时间</th><th>木炭</th><th>木炭</th><th>玉鋼</th><th>玉鋼</th><th>冷却</th><th>冷却</th><th>砥石</th><th>砥石</th><th>依頼</th><th>依頼</th><th>手伝</th><th>手伝</th><th>小判</th><th>小判</th><th>Lv</th><th>編成</th></tr>
+			</thead>
+			<tbody>
+				<tr><td>A-1</td><td rowspan="4">維新</td><td>鳥羽·伏見の戦い</td><td>0:10</td><td>10</td><td>60</td><td>15</td><td>90</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>5</td><td>自由</td></tr>
+				<tr><td>A-2</td><td>世直し一揆</td><td>0:30</td><td></td><td></td><td></td><td></td><td>30</td><td>60</td><td>30</td><td>60</td><td></td><td></td><td></td><td></td><td></td><td></td><td>10</td><td>短刀</td></tr>
+				<tr><td>A-3</td><td>甲州勝沼の戦い</td><td>0:20</td><td>20</td><td>60</td><td></td><td></td><td>20</td><td>60</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>20</td><td>脇差</td></tr>
+				<tr><td>A-4</td><td>白河戦線</td><td>1:00</td><td></td><td></td><td>60</td><td>60</td><td></td><td></td><td>60</td><td>60</td><td></td><td></td><td></td><td></td><td></td><td></td><td>30</td><td>脇短</td></tr>
+				<tr><td>B-1</td><td rowspan="4">江戸</td><td>公武合体運動</td><td>1:30</td><td></td><td></td><td></td><td></td><td>90</td><td>60</td><td>90</td><td>60</td><td></td><td></td><td></td><td></td><td>200</td><td>133.3</td><td>50</td><td>自由</td></tr>
+				<tr><td>B-2</td><td>加役方人足寄場</td><td>3:00</td><td></td><td></td><td>50</td><td>16</td><td></td><td></td><td>250</td><td>83</td><td></td><td></td><td></td><td></td><td>200</td><td>66.7</td><td>60</td><td>打刀</td></tr>
+				<tr><td>B-3</td><td>享保の大飢饉</td><td>2:00</td><td>120</td><td>60</td><td></td><td></td><td>120</td><td>60</td><td></td><td></td><td>1</td><td>0.500</td><td></td><td></td><td></td><td></td><td>80</td><td>太刀</td></tr>
+				<tr><td>B-4</td><td>天下泰平</td><td>2:30</td><td></td><td></td><td>180</td><td>72</td><td></td><td></td><td>120</td><td>48</td><td></td><td></td><td>1</td><td>0.400</td><td></td><td></td><td>100</td><td>太打</td></tr>
+				<tr><td>C-1</td><td rowspan="4">織豊</td><td>美濃国の決戦</td><td>4:00</td><td>130</td><td>32</td><td>240</td><td>60</td><td></td><td></td><td></td><td></td><td>1</td><td>0.250</td><td></td><td></td><td></td><td></td><td>110</td><td>自由</td></tr>
+				<tr><td>C-2</td><td>反旗を翻した原因</td><td>3:00</td><td></td><td></td><td>100</td><td>33</td><td>60</td><td>20</td><td>150</td><td>50</td><td></td><td></td><td>1</td><td>0.333</td><td></td><td></td><td>120</td><td>大太</td></tr>
+				<tr><td>C-3</td><td>安土城の警備</td><td>10:00</td><td>200</td><td>20</td><td></td><td></td><td>500</td><td>50</td><td></td><td></td><td></td><td></td><td></td><td></td><td>400</td><td>40.0</td><td>130</td><td>自由</td></tr>
+				<tr><td>C-4</td><td>天下布武</td><td>8:00</td><td></td><td></td><td>200</td><td>25</td><td></td><td></td><td>500</td><td>62</td><td></td><td></td><td>1</td><td>0.125</td><td></td><td></td><td>140</td><td>自由</td></tr>
+				<tr><td>D-1</td><td rowspan="4">戦国</td><td>長篠城攻城戦</td><td>2:00</td><td></td><td></td><td>80</td><td>40</td><td>100</td><td>50</td><td>60</td><td>30</td><td>1</td><td>0.500</td><td></td><td></td><td></td><td></td><td>150</td><td>自由</td></tr>
+				<tr><td>D-2</td><td>西上作戦</td><td>5:00</td><td>100</td><td>20</td><td>380</td><td>76</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>400</td><td>80.0</td><td>180</td><td>自由</td></tr>
+				<tr><td>D-3</td><td>甲相駿三国同盟</td><td>12:00</td><td>100</td><td>8</td><td>200</td><td>17</td><td>500</td><td>42</td><td></td><td></td><td></td><td></td><td>2</td><td>0.167</td><td></td><td></td><td>200</td><td>自由</td></tr>
+				<tr><td>D-4</td><td>比叡山延暦寺</td><td>6:00</td><td>150</td><td>25</td><td></td><td></td><td></td><td></td><td>400</td><td>67</td><td></td><td></td><td></td><td></td><td>700</td><td>116.6</td><td>220</td><td>自由</td></tr>
+				<tr><td>E-1</td><td rowspan="4">武家</td><td>鎌倉防衛戦</td><td>12:00</td><td>250</td><td>21</td><td>250</td><td>21</td><td>250</td><td>21</td><td></td><td></td><td></td><td></td><td>2</td><td>0.167</td><td></td><td></td><td>240</td><td>自由</td></tr>
+				<tr><td>E-2</td><td>元寇防塁</td><td>18:00</td><td>200</td><td>11</td><td>500</td><td>28</td><td>300</td><td>17</td><td></td><td></td><td></td><td></td><td>2</td><td>0.111</td><td>700</td><td>38.9</td><td>260</td><td>槍</td></tr>
+				<tr><td>E-3</td><td>流鏑馬揃え</td><td>15:00</td><td>350</td><td>23</td><td>200</td><td>13</td><td>100</td><td>7</td><td>250</td><td>17</td><td></td><td></td><td></td><td></td><td>700</td><td>46.7</td><td>280</td><td>薙刀</td></tr>
+				<tr><td>E-4</td><td>奥州合戦</td><td>24:00</td><td>300</td><td>13</td><td>400</td><td>17</td><td>500</td><td>21</td><td></td><td></td><td>3</td><td>0.125</td><td></td><td></td><td>700</td><td>29.2</td><td>300</td><td>二種</td></tr>
+			</tbody>
+		</table>
+	</div>
 </section>
 
 <section>
